--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -61,14 +61,12 @@ privacy_pack = false
 gravatar = false
 
 # Contact Widget setup
-  email = "test@example.org"
-  address = "Building 1 Room 1, Stanford University, California, 90210, USA"
+  email = "miga-magenika.julian@uni-jena.de"
+  address = "Lehrstuhl für Geoinformatik, Room 125, Grietgasse 6, 07743 Jena, Germany"
   # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
-  office_hours = """Monday 10:00 to 13:00<br>
-                    Wednesday 09:00 to 10:00<br>
-                    Otherwise email to book an appointment"""
-  phone = "888 888 88 88"
-  skype = "echo123"
+  office_hours = """By appointment"""
+  phone = "+49-3641-9-48877"
+  skype = "miga.m.julian"
   telegram = ""
   keybase = ""  # Your keybase.io username.
 
@@ -94,10 +92,10 @@ gravatar = false
   #   1: Google Maps
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
-  map = 0
+  map = 1
   map_api_key = ""
-  latitude = "37.4275"
-  longitude = "-122.1697"
+  latitude = "50.926762"
+  longitude = "11.587387"
   zoom = 15
 
 # Publication types.
