--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,10 +13,10 @@
   url = "#publications_featured"
   weight = 2
 
-[[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 3
+# [[main]]
+#  name = "Posts"
+#  url = "#posts"
+#  weight = 3
 
 [[main]]
   name = "Projects"
@@ -24,9 +24,14 @@
   weight = 4
 
 [[main]]
-  name = "Tutorials"
-  url = "/tutorial/"
-  weight = 5
+  name = "Teaching"
+  url = "#teaching"
+  weight = 4
+
+# [[main]]
+#  name = "Tutorials"
+#  url = "/tutorial/"
+#  weight = 5
 
 [[main]]
   name = "Contact"
